[gd_scene load_steps=2 format=3 uid="uid://kf8jrw1sjy07"]

[ext_resource type="Script" path="res://scripts/save_slots.gd" id="1_nuqpq"]

[node name="SaveSlots" type="ColorRect"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223103, 0.223103, 0.223103, 0.501961)
script = ExtResource("1_nuqpq")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(256, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a Slot"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Slot1" type="Button" parent="Control/Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2

[node name="Slot2" type="Button" parent="Control/Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2

[node name="Slot3" type="Button" parent="Control/Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2

[connection signal="pressed" from="Control/Background/MarginContainer/VBoxContainer/HBoxContainer/Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="Control/Background/MarginContainer/VBoxContainer/HBoxContainer/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="Control/Background/MarginContainer/VBoxContainer/HBoxContainer/Slot3" to="." method="_on_slot_3_pressed"]
